--- a/backend/src/main/webapp/app/styles/chatting.css
+++ b/backend/src/main/webapp/app/styles/chatting.css
@@ -58,13 +58,14 @@
 
 #chatbox .minz {
 	height: 8px;
-    width: 20px;
+    width: 30px;
     margin: -1px;
     background: #62819c;
     position: absolute;
     right: 0;
     cursor: pointer;
     transition: .5s ease-in-out;
+    border-radius: 0 0 3px 3px;
 }
 
 #chatbox #topmenu span.friends {
@@ -304,47 +305,38 @@
 	margin-right: -38px;
 }
 
-#chatbox .message .bubble {
+/* #chatbox .message .bubble {
 	background: #f0f4f7;
-	font-size: 13px;
-	font-weight: 600;
+	font-size: 12px;
 	padding: 12px 13px;
 	border-radius: 5px 5px 5px 0px;
-	color: #8495a3;
+	color: #46515a;
 	position: relative;
 	float: left;
+} */
+
+#chatbox .message .bubble .msg {
+	background: #f0f4f7;
+	font-size: 12px;
+	padding: 12px 13px;
+	border-radius: 5px 5px 5px 0px;
+	color: #46515a;
+	position: relative;
+	float: left;
+	white-space: pre-wrap;
 }
 
-#chatbox #chat-messages div.message.right .bubble {
+#chatbox #chat-messages div.message.right .bubble .msg {
 	float: right;
 	border-radius: 5px 5px 0px 5px;
 }
 
-#chatbox .bubble .corner {
-	background:
-		url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/bubble-corner.png")
-		0 0 no-repeat;
-	position: absolute;
-	width: 7px;
-	height: 7px;
-	left: -5px;
-	bottom: 0;
-}
-
-#chatbox div.message.right .corner {
-	background:
-		url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/bubble-cornerR.png")
-		0 0 no-repeat;
-	left: auto;
-	right: -5px;
-}
-
-#chatbox .bubble span {
+#chatbox .bubble .time {
 	color: #aab8c2;
-	font-size: 11px;
+	font-size: 10px;
 	position: absolute;
-	right: 0;
-	bottom: -22px;
+    right: 3px;
+    bottom: 0;
 }
 
 #chatbox #sendmessage {
