--- a/backend/src/main/webapp/app/styles/chatting.css
+++ b/backend/src/main/webapp/app/styles/chatting.css
@@ -108,6 +108,7 @@
 
 #chatbox .friend img {
 	width: 30px;
+	height: 30px;
 	border-radius: 50%;
 	margin: 7px;
 	float: left;
@@ -255,11 +256,11 @@
 	transition: all 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
 }
 
-#chatbox #chat-messages::-webkit-scrollbar, #chatbox .friend-box::-webkit-scrollbar{
+#chatbox #chat-messages::-webkit-scrollbar, #chatbox .friend-box::-webkit-scrollbar, #chatbox #sendmessage #inputMsg::-webkit-scrollbar {
 	width: 15px;
 }
 
-#chatbox #chat-messages::-webkit-scrollbar-thumb, #chatbox .friend-box::-webkit-scrollbar-thumb {
+#chatbox #chat-messages::-webkit-scrollbar-thumb, #chatbox .friend-box::-webkit-scrollbar-thumb, #chatbox #sendmessage #inputMsg::-webkit-scrollbar-thumb {
 	background: #ccc;
 	-webkit-border-radius: 0;
 }
@@ -296,6 +297,7 @@
 	margin-left: -38px;
 	border-radius: 50%;
 	width: 30px;
+	height: 30px;
 	margin-top: 12px;
 }
 
