--- a/backend/src/main/webapp/app/styles/chatting.css
+++ b/backend/src/main/webapp/app/styles/chatting.css
@@ -275,13 +275,13 @@
 }
 
 #chatbox #chat-messages div.message {
-	padding: 0 0 30px 58px;
+	padding: 0 0 30px 44px;
 	clear: both;
 	margin-bottom: 45px;
 }
 
 #chatbox #chat-messages div.message.right {
-	padding: 0 58px 30px 0;
+	padding: 0 0 30px 0;
 	margin-right: -19px;
 	margin-left: 19px;
 }
