--- a/backend/src/main/webapp/app/styles/chatting.css
+++ b/backend/src/main/webapp/app/styles/chatting.css
@@ -313,6 +313,7 @@
 	position: relative;
 	float: left;
 	white-space: pre-wrap;
+	min-width: 100px;
 }
 
 #chatbox #chat-messages div.message.right .bubble .msg {
