--- a/backend/src/main/webapp/app/styles/chatting.css
+++ b/backend/src/main/webapp/app/styles/chatting.css
@@ -4,7 +4,7 @@
 	border-radius: 10px 0 0 0;
 	box-shadow: -2px -1px 5px 0px #7fa5c5;
 	overflow: hidden;
-	height: 559px;
+	height: 0;
 	position: absolute;
 	bottom: 30px;
 	right: 0;
