--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -41,7 +41,7 @@
 							</div>
 							
 							<div class="pull-right" style="position: relative; bottom: 5px;" ng-hide="group6">
-								<div class="form-group input-group" style="width: 200px;">
+								<div class="form-group input-group" style="width: 200px; margin-bottom: 0;">
 								  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
 								  	<select name="column" class="form-control input-sm" ng-disabled="!isAllUser" ng-model="formData.userId" ng-options="option.id as option.showname for option in users" ng-change="changeUser()">
 										<option value="">{{ allUserNoSelect }}</option>
@@ -56,7 +56,7 @@
 						<!-- /.panel-heading -->
 						<div class="panel-body" style="padding: 3px;">
 							<div class="row">
-								<div class="col-xs-12" style="margin-top: -10px;">
+								<div class="col-xs-12">
 									<div class="list-group" style="margin-bottom: 0;">
 										<div class="list-group-item" style="padding-top: 0; padding-bottom: 0;">
 											<div class="row">
