--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -68,7 +68,8 @@
 			        <input type="checkbox" title="ควบคุมการปริ้น Notice" ng-model="u.productSetting.isDisableNoticePrint" ng-change="productSetting(u, 1)" ng-show="group1">&emsp;
 			        <input type="checkbox" title="ปิด comment หน้างาน" ng-model="u.productSetting.isHideComment" ng-change="productSetting(u, 2)" ng-show="group1">&emsp;
 			        <input type="checkbox" title="ปิด Dashboard" ng-model="u.productSetting.isHideDashboard" ng-change="productSetting(u, 3)" ng-show="group1">&emsp;
-			        <input type="checkbox" title="ปิดระบบแจ้งเตือน" ng-model="u.productSetting.isHideAlert" ng-change="productSetting(u, 4)" ng-show="group1">
+			        <input type="checkbox" title="ปิดระบบแจ้งเตือน" ng-model="u.productSetting.isHideAlert" ng-change="productSetting(u, 4)" ng-show="group1">&emsp;
+			        <input type="checkbox" title="แสดงปุ่มยุติการติดตาม" ng-model="u.productSetting.isDisableBtnShow" ng-change="productSetting(u, 5)" ng-show="group1">
 				</td>
 			</tr>
 		</tbody>
