--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -169,9 +169,9 @@ tr.comm-row-strikeout td:before {
     display: none;
 }
 .flip-clock-wrapper div.inn {
-  background-color: #BDC3C7 !important;
+  background-color: #337ab7 !important;
   /* color: #4B92C2 !important; */
-  color: #307AAB !important;
+  color: #e6e6e6 !important;
 }
 /* ----------: Override Flipclock :---------- */
 
@@ -197,6 +197,21 @@ tr.comm-row-strikeout td:before {
                0 5px 10px rgba(0,0,0,.25),
                0 10px 10px rgba(0,0,0,.2),
                0 20px 20px rgba(0,0,0,.15);
+}
+
+.comm-txt-3d-st2 {
+	text-shadow: 0 1px 0 #337ab7, 
+				 0 2px 0 #337ab7, 
+				 0 3px 0 #337ab7, 
+				 0 4px 0 #337ab7, 
+				 0 5px 0 #337ab7, 
+				 0 6px 1px rgba(0, 0, 0, .1), 
+				 0 0 5px rgba(0, 0, 0, .1), 
+				 0 1px 3px rgba(0, 0, 0, .3), 
+				 0 3px 5px rgba(0, 0, 0, .2), 
+				 0 5px 10px rgba(0, 0, 0, .25), 
+				 0 10px 10px rgba(0, 0, 0, .2), 
+				 0 20px 20px rgba(0, 0, 0, .15);
 }
 
 .blink_me {
