--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -87,7 +87,7 @@
 				<div class="col-xs-5" 
 					 style="text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word; cursor: pointer;"
 					 ng-click="showMore(f, detail)">
-					<span>{{ f.columnNameAlias || f.columnName }}: </span>
+					<span>{{ f.columnNameAlias || f.columnName }}</span>
 				</div>
 				<!-- <div class="col-xs-7" style="padding: 1px 0 0 0; border-top: 1px solid #234E7C;"
 					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName], f.noticeForms, detail[f.noticeCusColName]) : ''"> -->
@@ -115,7 +115,7 @@
 		<div class="comm-rcorners-1" style="overflow: auto; background-color: #356190; margin-bottom: 1px; min-height: 64px; font-size: 13px; color: #E1E2E3; cursor: default;">
 			<table style="width: 100%;">
 				<tr>
-					<td style="width:0.1%; white-space: nowrap; padding-left: 15px;">{{ readMore.fieldName }}&nbsp;:&nbsp;</td>
+					<td style="width:0.1%; white-space: nowrap; padding-left: 15px;">{{ readMore.fieldName }}&nbsp;&nbsp;</td>
 					<td>						
 						<div class="well" style="margin: 0; padding: 6px 3px 3px 12px; color: black; min-height: 54px; font-weight: 700; background-color: #5bb9e2;" ng-hide="readMore.isEditMode">
 	                        {{
