--- a/backend/src/main/webapp/app/views/dashboard/collector.html
+++ b/backend/src/main/webapp/app/views/dashboard/collector.html
@@ -26,7 +26,7 @@
 							</th>
 							<th style="white-space: nowrap; text-align: center;">
 								<a href="" ng-click="columnOrder('balanceSum')" style="padding-left: 30px; padding-right: 30px; position: relative;">
-									ยอดหนี้รวม&nbsp;
+									ยอดหนี้รวม ({{ balanceColumnName }})&nbsp;
 									<i ng-class="{'comm-order-active': ('balanceSum' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 									<i ng-class="{'comm-order-active': ('balanceSum' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 								</a>
