--- a/backend/src/main/webapp/app/styles/chatting.css
+++ b/backend/src/main/webapp/app/styles/chatting.css
@@ -289,7 +289,7 @@
 	margin-left: 19px;
 }
 
-#chatbox #chat-messages .message img.thumbnail {
+#chatbox #chat-messages .message img.chat-thumbnail {
 	float: left;
 	margin-left: -38px;
 	border-radius: 50%;
@@ -298,7 +298,7 @@
 	margin-top: 12px;
 }
 
-#chatbox #chat-messages div.message.right img.thumbnail {
+#chatbox #chat-messages div.message.right img.chat-thumbnail {
 	float: right;
 	margin-left: 0;
 	margin-right: -38px;
