--- a/backend/src/main/webapp/app/styles/sb-admin-2.css
+++ b/backend/src/main/webapp/app/styles/sb-admin-2.css
@@ -34,7 +34,8 @@ body {
 
 #page-wrapper-manual {
     padding: 0 15px;
-    min-height: 568px;
+    height: 587px;
+    overflow: auto;
     background-color: #fff;
 }
 
