--- a/backend/src/main/webapp/app/views/manual/overview.html
+++ b/backend/src/main/webapp/app/views/manual/overview.html
@@ -1,59 +1,35 @@
 <div class="row">
 	<div class="col-xs-12">
-		<h1 class="page-header">ส่วนประกอบต่างๆ</h1>
+		<h1 class="page-header">Overview</h1>
 	</div>
 </div>
 <div class="row">
-	<div class="col-xs-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">Headings</div>
-			<div class="panel-body">1</div>
+	<div class="col-xs-8">
+		<div class="panel panel-info">
+			<div class="panel-body" style="padding: 3px;">
+				<img src="/backend/app/images/manual/main.PNG" class="img-rounded" style="width: 100%;">
+			</div>
 		</div>
 	</div>
 	<div class="col-xs-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">Paragraphs</div>
-			<div class="panel-body">2</div>
-		</div>
-	</div>
-	<div class="col-xs-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">Emphasis Classes</div>
-			<div class="panel-body">3</div>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">Abbreviations</div>
-			<div class="panel-body">4</div>
-		</div>
-	</div>
-	<div class="col-xs-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">Blockquotes</div>
-			<div class="panel-body">5</div>
-		</div>
-	</div>
-	<div class="col-xs-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">Lists</div>
-			<div class="panel-body">6</div>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">Description Lists</div>
-			<div class="panel-body">7</div>
-		</div>
-	</div>
-	<div class="col-xs-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">Code</div>
-			<div class="panel-body">8</div>
+		<div class="panel panel-info">
+			<div class="panel-body" style="padding: 3px;">
+				<div class="alert alert-info" style="margin-bottom: 0;">
+					คำอธิบาย
+					<ol>
+					  <li> แสดงเลข version ของระบบ DMS</li>
+					  <li> แสดงเวลา ซึ่งมีอยู่ 2 mode คือ แสดงเวลาปกติ และ เวลานับถอยหลังขึ้นอยู่กับการ setting</li>
+					  <li> แสดงชื่อพอร์ตที่กำลังทำงานอยู่</li>
+					  <li> แสดงเมนูการใช้งาน ซึ่งจะแตกต่างกันไปตามสิทธิที่ login</li>
+					  <li> แสดงชื่อเมนูที่เปิดใช้งานอยู่</li>
+					  <li> แสดงชื่อบริษัท</li>
+					  <li> แสดงข้อมูลผู้ใช้งาน เช่น รูป ชื่อ-สกุล</li>
+					  <li> click เพื่อเปิดหน้าต่าง chat</li>
+					  <li> Company Code</li>
+					  <li> click เพื่อเปิดคู่มือการใช้งาน</li>
+					</ol>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
