--- a/backend/src/main/webapp/app/views/manual/overview.html
+++ b/backend/src/main/webapp/app/views/manual/overview.html
@@ -15,7 +15,8 @@
 		<div class="panel panel-info">
 			<div class="panel-body" style="padding: 3px;">
 				<div class="alert alert-info" style="margin-bottom: 0;">
-					คำอธิบาย
+					<u>คำอธิบาย</u>
+					<small>
 					<ol>
 					  <li> แสดงเลข version ของระบบ DMS</li>
 					  <li> แสดงเวลา ซึ่งมีอยู่ 2 mode คือ แสดงเวลาปกติ และ เวลานับถอยหลังขึ้นอยู่กับการ setting</li>
@@ -28,6 +29,7 @@
 					  <li> Company Code</li>
 					  <li> click เพื่อเปิดคู่มือการใช้งาน</li>
 					</ol>
+					</small>
 				</div>
 			</div>
 		</div>
