--- a/backend/src/main/webapp/app/views/manual/overview.html
+++ b/backend/src/main/webapp/app/views/manual/overview.html
@@ -7,7 +7,7 @@
 	<div class="col-xs-8">
 		<div class="panel panel-info">
 			<div class="panel-body" style="padding: 3px;">
-				<img src="/backend/app/images/manual/main.PNG" class="img-rounded" style="width: 100%;">
+				<img src="/backend/app/images/manual/overview.PNG" class="img-rounded" style="width: 100%;">
 			</div>
 		</div>
 	</div>
@@ -19,15 +19,15 @@
 					<small>
 					<ol>
 					  <li> แสดงเลข version ของระบบ DMS</li>
-					  <li> แสดงเวลา ซึ่งมีอยู่ 2 mode คือ แสดงเวลาปกติ และ เวลานับถอยหลังขึ้นอยู่กับการ setting</li>
-					  <li> แสดงชื่อพอร์ตที่กำลังทำงานอยู่</li>
-					  <li> แสดงเมนูการใช้งาน ซึ่งจะแตกต่างกันไปตามสิทธิที่ login</li>
+					  <li> แสดงเวลา จะมีการแสดง 2 รูปแบบ คือ แสดงเป็นนาฬิกา หรือ แสดงเวลานับถอยหลัง ขึ้นอยู่กับการตั้งค่า</li>
+					  <li> แสดงชื่อพอร์ตงาน</li>
+					  <li> แสดงเมนูการใช้งาน ซึ่งจะแตกต่างกันไปตามสิทธิที่เข้าใช้งานระบบ</li>
 					  <li> แสดงชื่อเมนูที่เปิดใช้งานอยู่</li>
 					  <li> แสดงชื่อบริษัท</li>
 					  <li> แสดงข้อมูลผู้ใช้งาน เช่น รูป ชื่อ-สกุล</li>
-					  <li> click เพื่อเปิดหน้าต่าง chat</li>
+					  <li> ระบบ ส่งข้อความ (chat)</li>
 					  <li> Company Code</li>
-					  <li> click เพื่อเปิดคู่มือการใช้งาน</li>
+					  <li> คู่มือการใช้งานระบบ DMS</li>
 					</ol>
 					</small>
 				</div>
