--- a/backend/src/main/webapp/app/views/manual/overview.html
+++ b/backend/src/main/webapp/app/views/manual/overview.html
@@ -15,6 +15,8 @@
 		<div class="panel panel-info">
 			<div class="panel-body" style="padding: 3px;">
 				<div class="alert alert-info" style="margin-bottom: 0;">
+					<p><em>แสดงส่วนประกอบต่างๆ ของระบบ DMS</em></p>
+					<hr style="margin-top: 0; margin-bottom: 5px;" />
 					<u>คำอธิบาย</u>
 					<small>
 					<ol>
