--- a/backend/src/main/webapp/app/views/manual/dashboard.html
+++ b/backend/src/main/webapp/app/views/manual/dashboard.html
@@ -20,14 +20,14 @@
 					<u>คำอธิบาย</u>
 					<small>
 					<ol>
-					  <li> ช่วงวันที่ของข้อมูล</li>
+					  <li> ช่วงวันที่ของข้อมูลที่ต้องการแสดง</li>
 					  <li> เลือกประเภทข้อมูลที่ต้องการแสดง ทั้งหมด หรือ รายบัญชี
-						  <ol>
-						  	<li>ทั้งหมด หมายถึง เอาข้อมูลทุกครั้งที่บัญทึก</li>
-						  	<li>รายบัญชี หมายถึง ถ้าบัญชีนั้นมีการบันทึกหลายครั้ง ให้เอามาแค่ 1</li>
-						  </ol>
+						  <ul>
+						  	<li><u>ทั้งหมด</u> หมายถึง แสดงจำนวนการบันทึกทั้งหมด เช่น 1 บัญชีอาจมีการบันทึกมากกว่า 1 ครั้ง</li>
+						  	<li><u>รายบัญชี</u> หมายถึง แสดงจำนวนบัญชีที่มีการบัญทึก</li>
+						  </ul>
 					  </li>
-					  <li> แสดงจำนวน</li>
+					  <li> แสดงจำนวนการบันทึก</li>
 					  <li> แสดงชื่อผู้ใช้</li>
 					  <li> แสดงข้อมูลรวม</li>
 					</ol>
