--- a/backend/src/main/webapp/app/views/dym_list/search.html
+++ b/backend/src/main/webapp/app/views/dym_list/search.html
@@ -1,28 +1,23 @@
 <div class="row">
 	<div class="col-xs-6" style="padding-right: 3px;">
     	<div class="panel panel-default">
-        	<div class="panel-heading">
-                  Field Search
-            </div>
+        	<div class="panel-heading">Field</div>
             <div class="panel-body">
-            
-            
+            	
             	<div class="table-responsive">
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr style="color: #337AB7;">
-								<th>ชื่อ</th>
+								<th>Name</th>
 								<th>Field Name</th>
-								<th>Order</th>
-								<th>สถานะ</th>
-								<th></th>
+								<th>Status</th>
+								<th style="width: 20%;"></th>
 							</tr>
 						<thead>
 						<tbody>
 							<tr ng-repeat="item in items" style="color: #337AB7;">
 								<td style="vertical-align: middle;"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
 								<td style="vertical-align: middle;"><span editable-text="item.fieldName" e-name="fieldName" e-form="rowform">{{ item.fieldName }}</span></td>
-								<td style="vertical-align: middle;"><span editable-text="item.order" e-name="order" e-form="rowform">{{ item.order }}</span></td>
 								
 								<td style="vertical-align: middle;">
 									<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
@@ -30,15 +25,57 @@
 										<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
 									</span>
 								</td>
-								<td style="vertical-align: middle;">
+								<td style="vertical-align: middle; text-align: right;">
 									<form editable-form name="rowform" onbeforesave="saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
 										<i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewItem(item)" title="ยกเลิก"></i>&nbsp; 
 										<i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
 									</form>
 									<div class="buttons" ng-show="!rowform.$visible">
-										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ" ng-show="group0"></i>&nbsp; 
-										<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="group0"></i>&nbsp;
-										<i class="fa fa-bars fa-lg user-action-icon-primary" ng-click="gotoDet(item.id)" title="detail"></i>
+										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ"></i>&nbsp; 
+										<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข"></i>&nbsp;
+										<i class="fa fa-bars fa-lg user-action-icon-primary" ng-click="gotoVal(item.id)" title="Value"></i>
+									</div>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+            	
+	            <div class="pull-right">
+					<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()">
+						<i class="fa fa-plus-square"></i>
+					</button>
+				</div>
+	
+            </div>
+    	</div>
+	</div>
+	<div class="col-xs-6" style="padding-left: 3px;"">
+		<div class="panel panel-default">
+			<div class="panel-heading">Value</div>
+            <div class="panel-body">
+            
+	            <div class="table-responsive">
+					<table class="table table-striped table-hover">
+						<thead>
+							<tr style="color: #337AB7;">
+								<th>Name</th>
+								<th>Value</th>
+								<th style="width: 20%;"></th>
+							</tr>
+						<thead>
+						<tbody>
+						<tr ng-repeat="item in values" style="color: #337AB7;">
+							<td style="vertical-align: middle;"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
+							<td style="vertical-align: middle;"><span editable-text="item.value" e-name="value" e-form="rowform">{{ item.value }}</span></td>
+							<td style="vertical-align: middle; text-align: right;">
+								<form editable-form name="rowform" onbeforesave="saveValue($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="valInserted == item">
+									<i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewValue(item)" title="ยกเลิก"></i>&nbsp; 
+									<i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
+									</form>
+									<div class="buttons" ng-show="!rowform.$visible">
+										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeValue($index, item.id)" title="ลบ"></i>&nbsp; 
+										<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข"></i>
 									</div>
 								</td>
 							</tr>
@@ -48,16 +85,14 @@
             
             
             
-            </div>
-    	</div>
-	</div>
-	<div class="col-xs-6" style="padding-left: 3px;"">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-                Value Search
-            </div>
-            <div class="panel-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+            	<div class="pull-right">
+					<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addValue()">
+						<i class="fa fa-plus-square"></i>
+					</button>
+				</div>
+            
+            
+            
             </div>
           </div>
 	</div>
