--- a/backend/src/main/webapp/app/views/forecast/main.html
+++ b/backend/src/main/webapp/app/views/forecast/main.html
@@ -32,14 +32,14 @@
 									
 									  <div class="form-group input-group" ng-show="group2 || group5">
 									  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
-									  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users" ng-change="search()">
+									  	<select style="width: 120px;" name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users" ng-change="search()">
 											<option value="">--ทั้งหมด--</option>
 								  		</select>
 									  </div>
 									  
 									  <div class="form-group input-group">
 									   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-									    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword" style="width: 150px;">
+									    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword">
 									  </div>
 									  
 									  <div class="input-group input-daterange">
@@ -56,12 +56,6 @@
 									    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
 									    	   style="width: 120px;" ng-model="formData.dateTo" ng-change="dateToChange()" placeholder="วันที่สิ้นสุด">
 									  </div>
-									  
-									  &nbsp;&nbsp;
-									  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
-								   	  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
-									  
-									  
 									  
 									  <div class="pull-right" ng-show="group2 || group5">
 									  	  <div class="dropdown pull-right">
@@ -106,6 +100,55 @@
 									   </div>
 									</div>
 								</div>
+								
+								
+								
+								
+								<div class="row" style="margin-top: 5px;">
+								   	<div class="col-xs-12">
+								   		<div class="form-group input-group">
+											<span class="input-group-addon">Code</span>
+											<div class="input-group">
+												<select style="width: 120px;" name="codeName" class="form-control" ng-model="formData.codeName" ng-options="option.fieldName as option.name for option in dymList" ng-change="codeNameChange()">
+													<option value="">--Select--</option>
+										  		</select>
+												<div class="input-group-btn">
+											        <button ng-disabled="!codeGroups.length || codeGroups.length == 0" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">{{ selectedCodeName.groupSelected.name }} <span class="caret"></span></button>
+											        <ul class="dropdown-menu">
+											          <li ng-repeat="gp in codeGroups"><a href="" ng-click="changeGroup(gp)">{{ gp.name }}</a></li>
+											        </ul>
+												</div>	
+												<select style="width: 120px;" ng-disabled="!selectedCodeName.dymListDet || selectedCodeName.dymListDet.length == 0" name="codeValue" class="form-control" ng-model="formData.codeValue" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in selectedCodeName.dymListDet" ng-change="search()">
+													<option value="">--Select--</option>
+										  		</select>
+									  		</div>
+										</div>
+										<div class="form-group input-group">
+											<span class="input-group-addon">Filter</span>
+											<div class="input-group">
+												<select style="width: 120px;" name="fiedName" class="form-control" ng-model="formData.dymSearchFieldName" ng-options="option.name for option in dymSearch" ng-change="search()">
+													<option value="">--Select--</option>
+										  		</select>
+										  		<span class="input-group-addon"></span>
+												<select style="width: 120px;" ng-disabled="!formData.dymSearchFieldName.values || formData.dymSearchFieldName.values.length == 0" name="searchValue" class="form-control" ng-model="formData.dymSearchValue" ng-options="option.value as option.name for option in formData.dymSearchFieldName.values" ng-change="search()">
+													<option value="">--Select--</option>
+										  		</select>
+									  		</div>
+										</div>
+								   	
+								   		&nbsp;&nbsp;
+									  	<button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+								   	  	<button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+									</div>
+								</div>
+								
+								
+								
+								
+								
+								
+								
+								
 							</form>
 						</div>
 						
