--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -12,17 +12,6 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> แสดงผลการติดตาม
-                    <!-- <div class="btn-group pull-right" ng-show="group0 || group5">
-			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-			            	<i class="fa fa-chevron-down"></i>
-			            </button>
-			            <ul class="dropdown-menu slidedown">
-			                <li ng-repeat="u in products">
-			                    <a href="" ng-click="changeProduct(u)">{{ u.productName }}</a>
-			                </li>
-			            </ul>
-			        </div>
-			        <span class="pull-right" ng-show="group0 || group5">{{ workingOnProduct.productName }}&nbsp&nbsp</span> -->
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 
@@ -35,14 +24,14 @@
 									
 									  <div class="form-group input-group">
 									  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
-									  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users" ng-change="search()">
+									  	<select style="width: 120px;" name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users" ng-change="search()">
 											<option value="">--ทั้งหมด--</option>
 								  		</select>
 									  </div>
 									  
 									  <div class="form-group input-group">
 									   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-									    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword" style="width: 150px;">
+									    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword">
 									  </div>
 									  
 									  <div class="input-group input-daterange">
@@ -141,7 +130,7 @@
 										<div class="form-group input-group">
 											<span class="input-group-addon">Code</span>
 											<div class="input-group">
-												<select name="codeName" class="form-control" ng-model="formData.codeName" ng-options="option.fieldName as option.name for option in dymList" ng-change="codeNameChange()">
+												<select style="width: 120px;" name="codeName" class="form-control" ng-model="formData.codeName" ng-options="option.fieldName as option.name for option in dymList" ng-change="codeNameChange()">
 													<option value="">--Select--</option>
 										  		</select>
 												<div class="input-group-btn">
@@ -150,7 +139,20 @@
 											          <li ng-repeat="gp in codeGroups"><a href="" ng-click="changeGroup(gp)">{{ gp.name }}</a></li>
 											        </ul>
 												</div>	
-												<select ng-disabled="!selectedCodeName.dymListDet || selectedCodeName.dymListDet.length == 0" name="codeValue" class="form-control" ng-model="formData.codeValue" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in selectedCodeName.dymListDet" ng-change="search()">
+												<select style="width: 120px;" ng-disabled="!selectedCodeName.dymListDet || selectedCodeName.dymListDet.length == 0" name="codeValue" class="form-control" ng-model="formData.codeValue" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in selectedCodeName.dymListDet" ng-change="search()">
+													<option value="">--Select--</option>
+										  		</select>
+									  		</div>
+										</div>
+										
+										<div class="form-group input-group">
+											<span class="input-group-addon">Filter</span>
+											<div class="input-group">
+												<select style="width: 120px;" name="fiedName" class="form-control" ng-model="formData.dymSearchFieldName" ng-options="option.name for option in dymSearch" ng-change="search()">
+													<option value="">--Select--</option>
+										  		</select>
+										  		<span class="input-group-addon"></span>
+												<select style="width: 120px;" ng-disabled="!formData.dymSearchFieldName.values || formData.dymSearchFieldName.values.length == 0" name="searchValue" class="form-control" ng-model="formData.dymSearchValue" ng-options="option.value as option.name for option in formData.dymSearchFieldName.values" ng-change="search()">
 													<option value="">--Select--</option>
 										  		</select>
 									  		</div>
